--- a/index.html
+++ b/index.html
@@ -53,15 +53,16 @@
 							<article class="post featured">
 								<header class="major">
 						
-									<h2><a href="#">Pedaling Through the Data: Analyzing and Visualizing Cycling Patterns with R</a></h2>
-									<p>My final project for the Google Data Analytics Professional Certificate involved analyzing a public dataset on behalf of
-									a fictitious company. To carry out this case study, I chose to utilize the R programming language for its robust
-									statistical analysis tools and data visualization capabilities. By exploring the dataset from various angles and using
-									R's analytical features, I was able to draw meaningful conclusions and provide valuable insights for the company.</p>
+									<h2><a href="#">Above the Clouds: A Route Analysis of Flights between SF and LA</a></h2>
+									<p>This project was a part of a job application process and involved creating a case study. The aim was to develop a
+									dashboard that would enable the client to compare and analyze flights between SF and LA to identify the most suitable
+									travel options for their requirements. For this case study, Excel and Power Bi were utilized, and by examining the
+									dataset from different perspectives and utilizing the analytical capabilities of these tools, meaningful conclusions and
+									valuable insights were derived for the client.</p>
 								</header>
-								<a href="#" class="image main"><img src="images/bike.jpg" alt="" /></a>
+								<a href="#" class="image main"><img src="images/Picture1.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://1drv.ms/p/s!AhwOUfAeaVeihpsViwfNnUXivIzrWQ?e=H5jFfY" target="_blank" class="button large">View Project</a></li>
+									<li><a href="https://1drv.ms/p/s!AhwOUfAeaVeihsUjFZlMpZ_2S2b-3A?e=ED7jvk" target="_blank" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
@@ -88,7 +89,7 @@
 											</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/survey.jpg" alt="" /></a>
-									<p>In this project, I used Power BI to create an interactive dashboard that analyzed the results of a survey of data
+									<p>In this project, I used Power BI to create an interactive dashboard that presents survey data of
 										professionals. The survey data was obtained from GitHub and included responses from a wide range of data
 										professionals across different industries and backgrounds. Through this project, I aimed to showcase my ability to utilize
 										Power BI's data visualization tools to create informative and engaging visualizations that would allow others to explore
