--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
 							<article class="post featured">
 								<header class="major">
 						
-									<h2><a href="#">Above the Clouds: A Route Analysis of Flights between SF and LA</a></h2>
+									<h2><a href="#">Visualizing Flight Data for Better Travel Planning: A Case Study in Excel and Power BI</a></h2>
 									<p>This project was a part of a job application process and involved creating a case study. The aim was to develop a
 									dashboard that would enable the client to compare and analyze flights between SF and LA to identify the most suitable
 									travel options for their requirements. For this case study, Excel and Power Bi were utilized, and by examining the
 									dataset from different perspectives and utilizing the analytical capabilities of these tools, meaningful conclusions and
 									valuable insights were derived for the client.</p>
 								</header>
-								<a href="#" class="image main"><img src="images/Picture1.jpg" alt="" /></a>
+								<a href="#" class="image main"><img src="images/BI.png" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://1drv.ms/p/s!AhwOUfAeaVeihsUjFZlMpZ_2S2b-3A?e=ED7jvk" target="_blank" class="button large">View Project</a></li>
 								</ul>
