--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 										the survey results and identify key trends and insights. 
 									</p>
 									<ul class="actions special">
-										<li><a href="https://app.powerbi.com/view?r=eyJrIjoiZmJhOTMyMmMtYWEwMC00ZmFiLTlmYWItYzM4NDA1ZWNkYjQzIiwidCI6ImRjMWUwYzMxLWNjYjEtNGJmMS04YzllLTg5ZGJlZjNkMGM5NiJ9"
+										<li><a href="https://app.powerbi.com/links/2uniAgCTBp?ctid=dc1e0c31-ccb1-4bf1-8c9e-89dbef3d0c96&pbi_source=linkShare"
 												target="_blank" class="button">View
 												Project</a></li>
 									</ul>
