--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 									dataset from different perspectives and utilizing the analytical capabilities of these tools, meaningful conclusions and
 									valuable insights were derived for the client.</p>
 								</header>
-								<a href="#" class="image main"><img src="images/BI.png" alt="" /></a>
+								<a href="https://1drv.ms/p/s!AhwOUfAeaVeihsUjFZlMpZ_2S2b-3A?e=ED7jvk" class="image main"><img src="images/BI.png" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://1drv.ms/p/s!AhwOUfAeaVeihsUjFZlMpZ_2S2b-3A?e=ED7jvk" target="_blank" class="button large">View Project</a></li>
 								</ul>
@@ -73,7 +73,7 @@
 										<h2><a href="#">Visualizing the Global COVID-19 Vaccine Rollout with Tableau
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/covid5.jpg" alt="" /></a>
+									<a href="https://public.tableau.com/app/profile/laima1489/viz/Covid-19VaccinationInformation/COVID-19VaccinationInformation" class="image fit"><img src="images/covid5.jpg" alt="" /></a>
 									<p>In this project, I designed and developed a dynamic and interactive dashboard in Tableau that tracks the progress of the
 									COVID-19 vaccination program globally. This dashboard provides a comprehensive overview of vaccination rates and distribution across different countries and regions. 
 								    With this dashboard, stakeholders and decision-makers can easily access key
@@ -88,7 +88,7 @@
 										<h2><a href="#">Uncovering Insights from Data Professionals Survey Results with Power BI<br />
 											</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/survey.jpg" alt="" /></a>
+									<a href="https://app.powerbi.com/links/2uniAgCTBp?ctid=dc1e0c31-ccb1-4bf1-8c9e-89dbef3d0c96&pbi_source=linkShare" class="image fit"><img src="images/survey.jpg" alt="" /></a>
 									<p>In this project, I used Power BI to create an interactive dashboard that presents survey data of
 										professionals. The survey data was obtained from GitHub and included responses from a wide range of data
 										professionals across different industries and backgrounds. Through this project, I aimed to showcase my ability to utilize
@@ -107,7 +107,7 @@
 										<h2><a href="#">Analyzing the Impact of COVID-19 with SQL <br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/covid6.jpg" alt="" /></a>
+									<a href="https://github.com/Laimuks/Project1-Covid-" class="image fit"><img src="images/covid6.jpg" alt="" /></a>
 									<p>In this project, I utilized SQL to explore and analyze COVID-19 data. By querying and processing relevant data, I
 									gained valuable insights into the pandemic's impact on different regions and populations. Furthermore, I prepared the
 									data for visualization, which will be the focus of my next project.</p>
@@ -120,7 +120,7 @@
 										<h2><a href="#">Visualizing the Impact of COVID-19 with Tableau<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/covid7.jpg" alt="" /></a>
+									<a href="https://public.tableau.com/app/profile/laima1489/viz/COVIDnumbers/DashboardCovid" class="image fit"><img src="images/covid7.jpg" alt="" /></a>
 									<p>In this project, I built on my previous work using SQL to analyze COVID-19 data by creating visualizations in Tableau. I
 									utilized the SQL queries I had developed to prepare the data for visualization and then created interactive dashboards
 									to effectively communicate key insights. </p>
@@ -134,7 +134,7 @@
 										<h2><a href="#">Cleaning and Standardizing Nashville Housing Data using SQL<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/cleaning.jpg" alt="" /></a>
+									<a href="https://github.com/Laimuks/Project2-NashvilleHousing/tree/main" class="image fit"><img src="images/cleaning.jpg" alt="" /></a>
 									<p>In this project, I worked with the Nashville Housing dataset from Kaggle to demonstrate my skills in SQL and data
 									cleaning. I used SQL queries to identify and address data inconsistencies, such as missing or incorrect values, and
 									standardized the data to improve its efficiency and ease of use. By cleaning the dataset, I was able to ensure that it
@@ -147,10 +147,10 @@
 								<article>
 									<header>
 						
-										<h2><a href="#">Investigating Correlations in the Movie Industry using Python<br />
+										<h2><a href="https://github.com/Laimuks/Movies_industry/tree/main">Investigating Correlations in the Movie Industry using Python<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/movies.jpg" alt="" /></a>
+									<a href="https://github.com/Laimuks/Movies_industry/tree/main" class="image fit"><img src="images/movies.jpg" alt="" /></a>
 									<p>In this project, I worked with the Movies Industry dataset from Kaggle to perform correlation analysis using Python.
 									Specifically, I investigated the relationship between variables such as budget and revenue, and aimed to identify any
 									significant correlations. Through this project, I utilized various Python libraries and data visualization tools to
