--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 									dataset from different perspectives and utilizing the analytical capabilities of these tools, meaningful conclusions and
 									valuable insights were derived for the client.</p>
 								</header>
-								<a href="https://1drv.ms/p/s!AhwOUfAeaVeihsUjFZlMpZ_2S2b-3A?e=ED7jvk" class="image main"><img src="images/BI.png" alt="" /></a>
+								<a href="https://app.powerbi.com/links/tCYorp20iq?ctid=dc1e0c31-ccb1-4bf1-8c9e-89dbef3d0c96&pbi_source=linkShare&bookmarkGuid=689ac8d3-feb5-43ca-b859-b0e71c58e2ba" class="image main"><img src="images/BI.png" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://1drv.ms/p/s!AhwOUfAeaVeihsUjFZlMpZ_2S2b-3A?e=ED7jvk" target="_blank" class="button large">View Project</a></li>
 								</ul>
