--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
 										<h2><a href="#">Visualizing the Global COVID-19 Vaccine Rollout with Tableau
 										</a></h2>
 									</header>
-									<a href="https://public.tableau.com/app/profile/laima1489/viz/Covid-19VaccinationInformation/COVID-19VaccinationInformation" class="image fit"><img src="images/covid5.jpg" alt="" /></a>
+									<a href="https://public.tableau.com/shared/Q52KP7X6W?:display_count=n&:origin=viz_share_link" class="image fit"><img src="images/tab.png" alt="" /></a>
 									<p>In this project, I designed and developed a dynamic and interactive dashboard in Tableau that tracks the progress of the
 									COVID-19 vaccination program globally. This dashboard provides a comprehensive overview of vaccination rates and distribution across different countries and regions. 
 								    With this dashboard, stakeholders and decision-makers can easily access key
 									information and make data-driven decisions to combat the ongoing COVID-19 pandemic.</p>
 									<ul class="actions special">
-										<li><a href="https://public.tableau.com/app/profile/laima1489/viz/Covid-19VaccinationInformation/COVID-19VaccinationInformation" target="_blank" class="button">View Project</a></li>
+										<li><a href="https://public.tableau.com/shared/Q52KP7X6W?:display_count=n&:origin=viz_share_link" target="_blank" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
@@ -88,7 +88,7 @@
 										<h2><a href="#">Uncovering Insights from Data Professionals Survey Results with Power BI<br />
 											</a></h2>
 									</header>
-									<a href="https://app.powerbi.com/links/2uniAgCTBp?ctid=dc1e0c31-ccb1-4bf1-8c9e-89dbef3d0c96&pbi_source=linkShare" class="image fit"><img src="images/survey.jpg" alt="" /></a>
+									<a href="https://app.powerbi.com/links/2uniAgCTBp?ctid=dc1e0c31-ccb1-4bf1-8c9e-89dbef3d0c96&pbi_source=linkShare" class="image fit"><img src="images/tab2.png" alt="" /></a>
 									<p>In this project, I used Power BI to create an interactive dashboard that presents survey data of
 										professionals. The survey data was obtained from GitHub and included responses from a wide range of data
 										professionals across different industries and backgrounds. Through this project, I aimed to showcase my ability to utilize
