--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 										<h2><a href="#">Visualizing the Global COVID-19 Vaccine Rollout with Tableau
 										</a></h2>
 									</header>
-									<a href="https://public.tableau.com/shared/Q52KP7X6W?:display_count=n&:origin=viz_share_link" class="image fit"><img src="images/tab.png" alt="" /></a>
+									<a href="https://public.tableau.com/shared/Q52KP7X6W?:display_count=n&:origin=viz_share_link" class="image fit"><img src="images/Tab.png" alt="" /></a>
 									<p>In this project, I designed and developed a dynamic and interactive dashboard in Tableau that tracks the progress of the
 									COVID-19 vaccination program globally. This dashboard provides a comprehensive overview of vaccination rates and distribution across different countries and regions. 
 								    With this dashboard, stakeholders and decision-makers can easily access key
