--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 										<h2><a href="#">Uncovering Insights from Data Professionals Survey Results with Power BI<br />
 											</a></h2>
 									</header>
-									<a href="https://app.powerbi.com/links/2uniAgCTBp?ctid=dc1e0c31-ccb1-4bf1-8c9e-89dbef3d0c96&pbi_source=linkShare" class="image fit"><img src="images/tab2.png" alt="" /></a>
+									<a href="https://app.powerbi.com/links/2uniAgCTBp?ctid=dc1e0c31-ccb1-4bf1-8c9e-89dbef3d0c96&pbi_source=linkShare" class="image fit"><img src="images/survey.png" alt="" /></a>
 									<p>In this project, I used Power BI to create an interactive dashboard that presents survey data of
 										professionals. The survey data was obtained from GitHub and included responses from a wide range of data
 										professionals across different industries and backgrounds. Through this project, I aimed to showcase my ability to utilize
