--- a/index.html
+++ b/index.html
@@ -53,21 +53,36 @@
 							<article class="post featured">
 								<header class="major">
 						
-									<h2><a href="#">Visualizing Flight Data for Better Travel Planning: A Case Study in Excel and Power BI</a></h2>
-									<p>This project was a part of a job application process and involved creating a case study. The aim was to develop a
-									dashboard that would enable the client to compare and analyze flights between SF and LA to identify the most suitable
-									travel options for their requirements. For this case study, Excel and Power Bi were utilized, and by examining the
-									dataset from different perspectives and utilizing the analytical capabilities of these tools, meaningful conclusions and
-									valuable insights were derived for the client.</p>
+									<h2><a href="#">Driving Success: Unveiling Business Metrics with the Northwind Traders KPI Dashboard</a></h2>
+									<p>The Northwind Traders project, submitted for the Maven Analytics Challenge, involved developing a KPI dashboard using a
+									provided dataset of sales and order data. By analyzing this data, insights were gained on sales trends, product performance, key customers, and shipping costs. The dashboard
+									presented the information visually, enabling interactive exploration and facilitating informed decision-making for Northwind Traders.</p>
 								</header>
-								<a href="https://app.powerbi.com/links/tCYorp20iq?ctid=dc1e0c31-ccb1-4bf1-8c9e-89dbef3d0c96&pbi_source=linkShare&bookmarkGuid=689ac8d3-feb5-43ca-b859-b0e71c58e2ba" class="image main"><img src="images/BI.png" alt="" /></a>
+								<a href="https://app.powerbi.com/links/CKg9zC2HgV?ctid=dc1e0c31-ccb1-4bf1-8c9e-89dbef3d0c96&pbi_source=linkShare" class="image main"><img src="images/north.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://1drv.ms/p/s!AhwOUfAeaVeihsUjFZlMpZ_2S2b-3A?e=ED7jvk" target="_blank" class="button large">View Project</a></li>
+									<li><a href="https://app.powerbi.com/links/CKg9zC2HgV?ctid=dc1e0c31-ccb1-4bf1-8c9e-89dbef3d0c96&pbi_source=linkShare" target="_blank" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
 						<!-- Posts -->
 							<section class="posts">
+								
+								<article>
+										<header>
+											<h2><a href="#">Visualizing Flight Data for Better Travel Planning: A Case Study in Excel and Power BI
+												</a></h2>
+										</header>
+										<a href="https://app.powerbi.com/links/tCYorp20iq?ctid=dc1e0c31-ccb1-4bf1-8c9e-89dbef3d0c96&pbi_source=linkShare&bookmarkGuid=689ac8d3-feb5-43ca-b859-b0e71c58e2ba" class="image fit"><img src="images/BI.png" alt="" /></a>
+										<p>This project was a part of a job application process and involved creating a case study. The aim was to develop a
+										dashboard that would enable the client to compare and analyze flights between SF and LA to identify the most suitable
+										travel options for their requirements. For this case study, Excel and Power Bi were utilized, and by examining the
+										dataset from different perspectives and utilizing the analytical capabilities of these tools, meaningful conclusions and
+										valuable insights were derived for the client.</p>
+										<ul class="actions special">
+											<li><a href="https://app.powerbi.com/links/tCYorp20iq?ctid=dc1e0c31-ccb1-4bf1-8c9e-89dbef3d0c96&pbi_source=linkShare&bookmarkGuid=689ac8d3-feb5-43ca-b859-b0e71c58e2ba"
+													target="_blank" class="button">View Project</a></li>
+										</ul>
+								</article>
 								<article>
 									<header>
 										<h2><a href="#">Visualizing the Global COVID-19 Vaccine Rollout with Tableau
