--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 									provided dataset of sales and order data. By analyzing this data, insights were gained on sales trends, product performance, key customers, and shipping costs. The dashboard
 									presented the information visually, enabling interactive exploration and facilitating informed decision-making for Northwind Traders.</p>
 								</header>
-								<a href="https://app.powerbi.com/links/CKg9zC2HgV?ctid=dc1e0c31-ccb1-4bf1-8c9e-89dbef3d0c96&pbi_source=linkShare" class="image main"><img src="images/north.png" alt="" /></a>
+								<a href="https://app.powerbi.com/view?r=eyJrIjoiOWJjYmIyMzQtNWU0Mi00YmNhLTkxMmMtMjAzYTkwZDNkNmQwIiwidCI6ImRjMWUwYzMxLWNjYjEtNGJmMS04YzllLTg5ZGJlZjNkMGM5NiJ9" class="image main"><img src="images/north.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://app.powerbi.com/links/CKg9zC2HgV?ctid=dc1e0c31-ccb1-4bf1-8c9e-89dbef3d0c96&pbi_source=linkShare" target="_blank" class="button large">View Project</a></li>
+									<li><a href="https://app.powerbi.com/view?r=eyJrIjoiOWJjYmIyMzQtNWU0Mi00YmNhLTkxMmMtMjAzYTkwZDNkNmQwIiwidCI6ImRjMWUwYzMxLWNjYjEtNGJmMS04YzllLTg5ZGJlZjNkMGM5NiJ9" target="_blank" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
@@ -72,14 +72,14 @@
 											<h2><a href="#">Visualizing Flight Data for Better Travel Planning: A Case Study in Excel and Power BI
 												</a></h2>
 										</header>
-										<a href="https://app.powerbi.com/links/tCYorp20iq?ctid=dc1e0c31-ccb1-4bf1-8c9e-89dbef3d0c96&pbi_source=linkShare" class="image fit"><img src="images/BI.png" alt="" /></a>
+										<a href="https://app.powerbi.com/view?r=eyJrIjoiZmU2ZDA0N2MtYmNhNi00MWJmLTkwODEtNTM1ZmI5OTdjNjI5IiwidCI6ImRjMWUwYzMxLWNjYjEtNGJmMS04YzllLTg5ZGJlZjNkMGM5NiJ9" class="image fit"><img src="images/BI.png" alt="" /></a>
 										<p>This project was a part of a job application process and involved creating a case study. The aim was to develop a
 										dashboard that would enable the client to compare and analyze flights between SF and LA to identify the most suitable
 										travel options for their requirements. For this case study, Excel and Power Bi were utilized, and by examining the
 										dataset from different perspectives and utilizing the analytical capabilities of these tools, meaningful conclusions and
 										valuable insights were derived for the client.</p>
 										<ul class="actions special">
-											<li><a href="https://app.powerbi.com/links/tCYorp20iq?ctid=dc1e0c31-ccb1-4bf1-8c9e-89dbef3d0c96&pbi_source=linkShare"
+											<li><a href="https://app.powerbi.com/view?r=eyJrIjoiZmU2ZDA0N2MtYmNhNi00MWJmLTkwODEtNTM1ZmI5OTdjNjI5IiwidCI6ImRjMWUwYzMxLWNjYjEtNGJmMS04YzllLTg5ZGJlZjNkMGM5NiJ9"
 													target="_blank" class="button">View Project</a></li>
 										</ul>
 								</article>
